--- a/.gitignore
+++ b/.gitignore
@@ -398,3 +398,8 @@ FodyWeavers.xsd
 
 # JetBrains Rider
 *.sln.iml
+
+# credenciales firebase
+**/credenciales.json
+Sockets-Servidor/credenciales/credenciales.json
+**/Sockets-Servidor/credenciales/credenciales.json
