--- a/Sockets-Servidor/Sockets-Servidor.csproj
+++ b/Sockets-Servidor/Sockets-Servidor.csproj
@@ -9,4 +9,8 @@
     <UseWPF>true</UseWPF>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Google.Cloud.Firestore" Version="3.9.0" />
+  </ItemGroup>
+
 </Project>
