--- a/Sockets-Servidor/Sockets-Servidor.csproj
+++ b/Sockets-Servidor/Sockets-Servidor.csproj
@@ -10,6 +10,24 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="image\iconClose.png" />
+    <None Remove="image\Logo.png" />
+    <None Remove="image\router-2-128.png" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="image\iconClose.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="image\Logo.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="image\router-2-128.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Google.Cloud.Firestore" Version="3.9.0" />
     <PackageReference Include="LiveCharts.Wpf" Version="0.9.7" />
     <PackageReference Include="MaterialDesignColors" Version="5.2.1" />
