--- a/Sockets-Servidor/Sockets-Servidor.csproj
+++ b/Sockets-Servidor/Sockets-Servidor.csproj
@@ -30,6 +30,7 @@
   <ItemGroup>
     <PackageReference Include="Google.Cloud.Firestore" Version="3.9.0" />
     <PackageReference Include="LiveCharts.Wpf" Version="0.9.7" />
+    <PackageReference Include="LiveCharts.Wpf.Core" Version="0.9.8" />
     <PackageReference Include="MaterialDesignColors" Version="5.2.1" />
     <PackageReference Include="MaterialDesignThemes" Version="5.2.1" />
     <PackageReference Include="OxyPlot.Wpf" Version="2.2.0" />
